@@ -2,6 +2,8 @@ Changes
 Day.pm
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -16,14 +18,14 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Random-Day/00-use.t
-t/Random-Day/01-version.t
-t/Random-Day/02-pod_coverage.t
-t/Random-Day/03-pod.t
-t/Random-Day/04-new.t
-t/Random-Day/05-get.t
-t/Random-Day/06-random.t
-t/Random-Day/07-random_day.t
-t/Random-Day/08-random_day_month.t
-t/Random-Day/09-random_day_month_year.t
-t/Random-Day/10-random_month.t
+t/Random-Day/01-use.t
+t/Random-Day/02-version.t
+t/Random-Day/03-new.t
+t/Random-Day/04-get.t
+t/Random-Day/05-random.t
+t/Random-Day/06-random_day.t
+t/Random-Day/07-random_day_month.t
+t/Random-Day/08-random_day_month_year.t
+t/Random-Day/09-random_month.t
+xt/Random-Day/01-pod_coverage.t
+xt/Random-Day/02-pod.t
