@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Class for random day generation';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.05;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Random-Day';
 readme_from 'Day.pm';
+recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'DateTime' => 0;
 requires 'DateTime::Event::Random' => 0;
@@ -22,11 +27,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 resources 'homepage' => 'https://github.com/tupinek/Random-Day';
 resources 'repository' => 'git://github.com/tupinek/Random-Day';
 test_requires 'English' => 0;
-test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.05';
 
